2008-11-04  Juanma Barranquero  <lekktu@gmail.com>

	* org.el (org-columns-modify-value-for-display-function):
	* org-table.el (org-table-convert-region): Fix typos in docstrings.

2008-10-28  Glenn Morris  <rgm@gnu.org>

	* org-agenda.el (org-agenda-align-tags): Replace use of cl `adjoin'.

	* org-list.el (outline-next-heading, outline-back-to-heading):
	Fix declarations.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org-agenda.el (org-format-agenda-item)
	(org-agenda-filter-make-matcher): Make sure tags are stored and
	compared donwcased.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-insert-todo-heading): Fix bug with force-heading
	argument.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org-exp.el (org-export-as-ascii): Handle the case that we are
	bulishing from an indirect buffer.

	* org-table.el (org-table-copy-down): Fix bug with time stamp
	increment.

	* org-mouse.el (org-mouse-features): New option.
	(org-mode-hook): Turn on features depending on
	`org-mouse-features'.

	* org.el (org-insert-heading-respect-content): Force heading
	creation.
	(org-insert-heading): keep the folding state of the heading before
	the inserted one.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org-archive.el (org-archive-to-archive-sibling): Handle top
	level headlines better.

2008-10-26  Bastien Guerry  <bzg@altern.org>

	* org-export-latex.el (org-export-latex-classes): Added
	\usepackage{graphicx} to the default list of packages.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org-agenda.el (org-agenda-filter): Renamed from
	`org-agenda-filter-tags'.

2008-10-26  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-entry-properties): Add CATEGORY property, iven if it
	is not defined as a property in this entry.
	(org-add-log-note): Mask prefix argument when immediately storing
	the note.

	* org-agenda.el (org-agenda-filter-effort-default-operator): New
	option.
